<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffffff"
    android:id="@+id/relativeLayout"
    android:gravity="top|center">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout"
        android:focusableInTouchMode="false"
        android:padding="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redButtonText"
            android:id="@+id/redButton"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="right"
            android:background="#00ffffff"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/redText"
            android:id="@+id/redValue"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greenButtonText"
            android:id="@+id/greenButton"
            android:layout_row="0"
            android:layout_column="1"
            android:background="#00ffffff"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blueButtonText"
            android:id="@+id/blueButton"
            android:layout_row="0"
            android:layout_column="2"
            android:background="#00ffffff"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/greenText"
            android:id="@+id/greenValue"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/blueText"
            android:id="@+id/blueValue"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upText"
            android:id="@+id/redUp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upText"
            android:id="@+id/greenUp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upText"
            android:id="@+id/blueUp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downText"
            android:id="@+id/redDown"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downText"
            android:id="@+id/greenDown"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downText"
            android:id="@+id/blueDown"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorButton"
            android:background="#ffffffff"
            android:layout_below="@+id/gridLayout"
            android:layout_centerHorizontal="true"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill" />
    </GridLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
